[package]
name = "voodo"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
edition = "2018"
description = "A minimalist language for representing and grouping todos"
readme = "README.md"
repository = "https://github.com/bsikar/voodo"
license = "MIT"

[dependencies]
clap = "2.33.3"
dirs = "3.0.2"
nom = "6.1.2"
